<resources>
    <string name="app_name">AppointmentManagement</string>
    <string name="view_edit_appointments">View/Edit appointments</string>
    <string name="create_appointment">Create appointment</string>
    <string name="delete_appointment">Delete appointment</string>
    <string name="move_appointment">Move appointment</string>
    <string name="search">Search</string>
    <string name="appointment_title">Appointment title</string>
    <string name="appointment_time">Appointment time</string>
    <string name="details_of_appointment">Details of appointment</string>
    <string name="save">Save</string>
    <string name="delete_all_appointments_for_that_date">Delete all appointments for that date</string>
    <string name="select_appointment_to_delete">Select appointment to delete</string>
    <string name="no_appointments_on_this_day">No appointments on this day</string>
    <string name="enter_number_of_appointment_to_delete">Enter number to delete</string>
    <string name="delete">Delete</string>
    <string name="view_edit">View/Edit</string>
    <string name="enter_number_to_edit">Enter number to edit</string>
    <string name="move">Move</string>
    <string name="enter_number_to_move">Enter number to move</string>
    <string name="enter_word">Enter word</string>
    <string name="thesaurus">Thesaurus</string>
    <string name="type_in_search_query">Type in search query</string>
</resources>
