<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coursework.com.appointmentmanagement.MainActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="81dp" />

            <Button
                android:id="@+id/create_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/create_appointment"
                android:layout_below="@+id/datePicker"
                android:onClick="openAddAppointmentActivity"
                android:layout_alignStart="@+id/search_button"
                android:layout_alignEnd="@+id/search_button" />

            <Button
                android:id="@+id/edit_appointments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_edit_appointments"
                android:layout_marginTop="56dp"
                android:layout_alignTop="@+id/search_button"
                android:layout_centerHorizontal="true"
                android:onClick="openEditActivity"/>


            <Button
                android:id="@+id/delete_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_appointment"
                android:layout_marginTop="11dp"
                android:layout_below="@+id/edit_appointments"
                android:layout_alignEnd="@+id/edit_appointments"
                android:layout_alignStart="@+id/edit_appointments"
                android:onClick="openDeleteAppointmentActivity"/>

            <Button
                android:id="@+id/move_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move_appointment"
                android:layout_alignTop="@+id/delete_appointment"
                android:layout_marginTop="58dp"
                android:onClick="openMoveAppointmentActivity"
                android:layout_alignEnd="@+id/delete_appointment"
                android:layout_alignStart="@+id/delete_appointment" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="openSearchActivity"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/create_appointment"
        android:layout_alignEnd="@+id/edit_appointments"
        android:layout_alignStart="@+id/edit_appointments" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
